<resources>
    <string name="app_name">Login MVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Login</string>
    <string name="text_enter_email">Email</string>
    <string name="text_enter_password">Password</string>
    <string name="text_create_an_account">Create an account</string>
    <string name="text_register">Register</string>
    <string name="text_enter_name">Name</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_welcome_user">Welcome User!</string>
    <string name="text_logout">Logout</string>
    <string name="text_home">Home</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_password_2">Password 2</string>
    <string name="lorem_ipsum_text">Lorem Ipsum</string>
    <string name="title_text">Lorem</string>
</resources>