<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LoginFragment">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:id="@+id/layoutContainerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/text_enter_email"
                    android:imeOptions=""
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_6sdp"
                    android:textColor="@color/colorTextDefault"
                    android:textColorHint="@color/colorTextHintDefault"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/text_enter_password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_6sdp"
                    android:textColor="@color/colorTextDefault"
                    android:textColorHint="@color/colorTextHintDefault"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:id="@+id/ivShowHidePassword"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_eye_visible" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:text="@string/text_login" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/text_create_an_account"
                android:textAllCaps="false"
                android:textColor="@color/colorTextDefault"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>